# ribbons

./: .gitignore  README.md  ribbons.cabal  stack.yaml
app/: Main.hs
resources/: color.h  noise.h  operations.h  primitives.h  shapes.frag  shapes.vert
