name:                ribbons
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lukexi/ribbons#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable ribbons
  hs-source-dirs:      app
  main-is:             Main.hs
  -- other-modules:
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , text
                     , sdl2
                     , gl
                     , sdl-pal
                     , gl-pal
                     , linear
                     , linear-extra
                     , lens-extra
                     , time
                     , mtl
                     , vector
                     , halive
                     , directory
                     , filepath
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lukexi/ribbons
